Try to fix popup overlap

--- a/css/love.css
+++ b/css/love.css
@@ -405,7 +405,7 @@ textarea {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 35%;
+    height: 25%;
 }
 
 .statusPopupContent {
